--- a/index.html
+++ b/index.html
@@ -93,6 +93,8 @@ background-color: blue;
 </table>
 <h2 id="4">PENGALAMAN</h2>
 <table align="center">
+    <p>Lulusan SMK jurusan Jurusan Teknik Komputer dan Jaringan (TKJ) dari SMK... Berpengalaman dan mampu membangun jaringan LAN, WAN hingga instalasi jaringan lainnya. Saat ini, memiliki ketertarikan untuk bekerja menjadi menjadi IT support.
+    </p>
 <tr>
 <td width="1%">It Support</td>
 <td width="10%">: Instalasi Jaringan LAN, Mikrotik</td>
@@ -113,7 +115,7 @@ background-color: blue;
 <td width="10%">: @izal.sofyan</td>
 </tr>
 </table>
-<footer>
+    <footer>
 <p align="center">
 <font align="center" font color="blue">
 <b>Copyright&copy; 2024</b> Created with HTML <a href="https://www.instagram.com/izal.sofyan/">https://www.instagram.com/izal.sofyan/</a>
