--- a/index.html
+++ b/index.html
@@ -43,9 +43,10 @@ background-color: blue;
 <table align="center" border="1">
 <tr><td colspan="2" bgcolor="#fff000"><img src="images.jpg" width="450px" height="200px" border="2"></td></tr>
 <tr align="center">
-<td> +62895602987147 </td>
-<td> muhammadrizalsofyan@gmail.com </td></tr>
+<td> </td>
+<td>  </td></tr>
 </table>
+<p align="center">Lulusan SMK jurusan Jurusan Teknik Komputer dan Jaringan (TKJ) dari SMK... Berpengalaman dan mampu membangun jaringan LAN, WAN hingga instalasi jaringan lainnya. Saat ini, memiliki ketertarikan untuk bekerja menjadi menjadi IT support.</p>
 <h2 id="1">PROFIL</h2>
 <table align="center">
 <tr>
@@ -53,8 +54,8 @@ background-color: blue;
 <td width="10%">: Muhamad Rizal Sofyan</td>
 </tr>
 <tr>
-<td width="1%">Tempat Lahir</td>
-<td width="10%">: Bandung</td>
+<td width="1%">Tempat Lahir/Tgl Lahir</td>
+<td width="10%">: Bandung, 25-06-2000</td>
 </tr>
 <tr>
 <td width="1%">Umur</td>
@@ -64,12 +65,32 @@ background-color: blue;
 <td width="1%">Alamat</td>
 <td width="10%">: Jl. TERUSAN HOLIS CIBOLERANG</td>
 </tr>
+<tr>
+<td width="1%">Kewarganegaraan</td>
+<td width="10%">: Indonesia</td>
+</tr>
+<tr>
+<td width="1%">Nomor Hanphone</td>
+<td width="10%">: 0895602987147</td>
+</tr>
+<tr>
+<td width="1%">E-mail</td>
+<td width="10%">: Muhammadrizalsofyan@gmail.com</td>
+</tr>
 </table>
 <h2 id="2">PENDIDIKAN</h2>
 <table align="center">
 <tr>
+<td width="1%">SD/MI</td>
+<td width="10%">: MI DARUL QALAM</td>
+</tr>
+<tr>
+<td width="1%">SMP/MTS</td>
+<td width="10%">: MTS Negri 1 Kota Bandung</td>
+</tr>
+<tr>
 <td width="1%">SMK</td>
-<td width="10%">: SMK Terpadu Ad-dimyati</td>
+<td width="10%">: SMK Terpadu Ad-dimyati (2016 s/d 2019)</td>
 </tr>
 <tr>
 <td width="1%">Jurusan</td>
@@ -93,12 +114,14 @@ background-color: blue;
 </table>
 <h2 id="4">PENGALAMAN</h2>
 <table align="center">
-    <p>Lulusan SMK jurusan Jurusan Teknik Komputer dan Jaringan (TKJ) dari SMK... Berpengalaman dan mampu membangun jaringan LAN, WAN hingga instalasi jaringan lainnya. Saat ini, memiliki ketertarikan untuk bekerja menjadi menjadi IT support.
-    </p>
 <tr>
 <td width="1%">It Support</td>
-<td width="10%">: Instalasi Jaringan LAN, Mikrotik</td>
+<td width="10%">: Merancang instalasi jaringan lan pada web komputer sekolah, Melakukan pemeliharaah secara rutin di web komputer </td>
 </tr>
+<td width="1%">Organisasi</td>
+<td width="10%">: Osis membantu menyukseskan program-program yang telah dibuat oleh kepala sekolaha dan kesiswaan </td>
+</tr>
+</table>
 </table>
 <h2 id="5">KONTAK</h2>
 <table align="center">
